# geom

./: .__main__.py.swo  .__main__.py.swp  .environment.yml.swp  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  __main__.py  compile_docs.sh  environment.yml  geom.py  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml  tests.yml
classes/: .molecule.py.swp  input_class.py  molecule.py  parameters.py
docs/: ai_assistant.rst  conf.py  example.rst  features.rst  gui.rst  index.rst  installation.rst  requirements.txt  tests.rst  usage.rst
docs/_static/css/: custom.css
docs/source/: activate_env.rst  api_reference.rst  code.rst  conf.py  contact.rst  example.rst  features.rst  index.rst  installation.rst  license.rst  usage.rst
functions/: .general.py.swp  create_geom.py  general.py  output.py  rotate.py  tools.py  translate.py  various.py
geom/: __main__.py
geom/ai_agent/: agents.py  ai_agents.py  ai_config.py  ai_main.py  ai_runner.py  config.py  desktop_chat_qt.py  main.py  run_geom_with_autogen.py  runner.py  validator.py
geom/classes/: input_class.py  molecule.py  parameters.py
geom/functions/: create_geom.py  general.py  output.py  rdkit_module.py  tools.py  translate.py
geom/gui/: __init__.py  create_desktop_app.sh  structure_generator.py  structure_gui.py
geom/gui/tests/: run_gui_tests.sh  test_structure_gui.py
geom/tests/: test_.py
geom/tests/bipyramid/: bipyramid_ag_width-30.0_length-50.0.xyz
geom/tests/bipyramid/reference/: bipyramid_ag_width-30.0_length-50.0.xyz
geom/tests/bowtie/reference/: bowtie_cone_ag_radius-40.0_zmin-0.0_zmax-30.0_-z_d_10.0.xyz
geom/tests/cone/: cone_ag_radius-30.0_zmin-0.0_zmax-50.0.xyz
geom/tests/cone/reference/: cone_ag_radius-30.0_zmin-0.0_zmax-50.0.xyz
geom/tests/cuboctahedron/reference/: cuboctahedron_au_r_50.0.xyz
geom/tests/decahedron/reference/: decahedron_ag_r_50.0.xyz
geom/tests/dimer/reference/: dimer_cone_ag_radius-40.0_zmin-0.0_zmax-30.0_+z_d_10.0.xyz
geom/tests/icosahedron/reference/: icosahedron_au_r_50.0.xyz
geom/tests/pencil_full_coated/: pencil_fullshell_core_ag_shell_au_in_width-20.0_in_length-30.0_out_length-36.12.xyz  pencil_fullshell_core_ag_shell_au_in_width-20.0_in_length-30.0_out_length-50.0.xyz
geom/tests/pencil_half_coated/: pencil_halfshell_core_ag_shell_au_in_width-20.0_in_length-30.0_out_length-42.24.xyz
geom/tests/rdkit_opt/: tyrosine.smi  tyrosine_opt.sdf
geom/tests/sphere_continuum/: sphere_r_50.0_mesh_size_10.0.msh
geom/tests/tc_center/: doxorubicin.xyz
tests/: run_tests.sh  test_.py  test_create_geom.py
tests/cone/: cone_radius-30.0_zmin-0.0_zmax-50.0.xyz
tests/cone/reference/: cone_radius-30.0_zmin-0.0_zmax-50.0.xyz
tests/control_distance/reference/: sphere_r_10.0_center_0.0_0.0_0.0_+x_d_10.00.xyz
tests/create_geom/: test_create_geom.py
tests/create_geom/microscope/: microscope_parabola_35.0_0.02_0.02_pyramid_35.0_37.0.xyz  pyramid_length-37.0_zmin-0.0_zmax-35.0.xyz
tests/create_geom/tip/: elliptic_paraboloid_a-0.02_b-0.02_zmin-0.0_zmax-50.0.xyz
tests/cuboctahedron/reference/: cuboctahedron_au_r_50.0.xyz
tests/graphene_disk/reference/: graphene_disk_30.0.xyz
tests/graphene_ribbon/reference/: graphene_ribbon_40.0_20.0.xyz
tests/graphene_triangle_armchair/: graphene_triangle_armchair_50.0.xyz
tests/graphene_triangle_zigzag/reference/: graphene_triangle_zigzag_50.0.xyz
tests/icosahedron/reference/: icosahedra_au_r_50.0.xyz
tests/manage_geom/: test_geometry.py
tests/manage_geom/specular/: doxorubicin_000.xyz
tests/microscope/: elliptic_paraboloid_0.02_b-0.02_zmin-0.0_zmax-40.0.xyz  microscope_parabola_26.0_0.02_0.02_pyramid_26.0_33.0.xyz  pyramid_length-33.0_zmin-0.0_zmax-26.0.xyz
tests/pyramid/reference/: pyramid_ag_length-30.0_zmin-0.0_zmax-50.0.xyz  pyramid_length-30.0_zmin-0.0_zmax-50.0.xyz
tests/r1_rotation/: doxorubicin_-y_degree_30.0.xyz
tests/rod/reference/: rod_X_l_50.0_w_20.0.xyz
tests/sphere/reference/: sphere_r_20.0_center_0.0_0.0_0.0.xyz
(+14 files in other folders)
