[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geom"
version = "2.0.0"
description = "Include RDKit for molecular manipulation."
readme = "README.md"
authors = [
    { name = "Pablo Grobas Illobre", email = "pgrobasillobre@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"

dependencies = [
    "gmsh==4.11.1",
    "ase==3.22.1",
    "numpy==1.24.3",
    "pytest==8.3.4",
    "launchpadlib==2.1.0",
    "openai==1.3.8",
    "pyautogen==0.2.18",
    "flaml[automl]==2.1.1",
    "httpx==0.27.2",
    "rdkit",
    "py3Dmol",
    "PySide6>=6.7.0",
    "python-dotenv>=1.0.1"
]

[project.urls]
Homepage = "https://github.com/pgrobasillobre/geom"
Documentation = "https://github.com/pgrobasillobre/geom/wiki"
"Bug Tracker" = "https://github.com/pgrobasillobre/issues"

[project.scripts]
geom = "geom.__main__:main"

[tool.setuptools.packages.find]
include = ["geom", "geom.*"]
