[project]
name = "geom-x"
version = "2.0.1"
description = "Include RDKit for molecular manipulation."
readme = "README.md"
authors = [{ name = "Pablo Grobas Illobre", email = "pgrobasillobre@gmail.com" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"

dependencies = [
    "numpy==1.24.3; python_version < '3.12'",
    "numpy>=1.26.0; python_version >= '3.12'",
    "launchpadlib==2.1.0",
    "openai==1.3.8",
    "pyautogen==0.2.18",
    "flaml[automl]==2.1.1",
    "httpx==0.27.2",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
# Extras
ui = ["PySide6>=6.7.0"]
viz = ["py3Dmol"]
cad = ["gmsh==4.11.1"]

# pip-installable fallback for CI/users without conda.
chem = ["rdkit-pypi"]

# This avoids hardcoding deps in the CI workflow.
test = [
    "pytest==8.3.4",
    "ase==3.22.1",
    "gmsh==4.11.1",
    "py3Dmol",
    "rdkit-pypi"
]

[project.urls]
Homepage = "https://github.com/pgrobasillobre/geom"
Documentation = "https://github.com/pgrobasillobre/geom/wiki"
"Bug Tracker" = "https://github.com/pgrobasillobre/issues"

[project.scripts]
geom = "geom.__main__:main"

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geom", "geom.*"]

